# TemperatureRegulatorSystem

./: AException.cpp  AException.hpp  ATemperatureSystem.cpp  ATemperatureSystem.hpp  CMakeLists.txt  CoolingSystem.cpp  CoolingSystem.hpp  HeatingStation.cpp  HeatingStation.hpp  HeatingSystem.cpp  HeatingSystem.hpp  IException.cpp  IException.hpp  PreferencesSystem.cpp  PreferencesSystem.hpp  README.md  Temperature.cpp  Temperature.hpp  TemperatureException.cpp  TemperatureException.hpp  Thermostat.cpp  Thermostat.hpp  main.cpp
